# cautious-barnacle

./: Cargo.toml  README.md
src/: game_compare_answers.rs  main.rs  other_routes.rs
static/: index.html  script.js  style.css
static/css/: game_page.css  game_page_test.css  global.css  initial_page.css
static/html/: game_page.html  game_page_test.html  initial_page.html
static/js/: game_page.js  initial_page.js  spotifyPlayerSetup.js
